navbar restyle inc media query for spacing issue and social links visibility: hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ h4 {
     text-transform: uppercase;
 }
 
+
 /*--------------------------------------------------------------------nav bar*/
 
 .navbar {
@@ -67,13 +68,14 @@ h4 {
     padding-top: 30px;
     color: #ffffff;
     font-family: "Abel", sans-serif;
-    font-size: 22px;
+    font-size: 1.375em;
     font-weight: 600;
     transition: all 0.35s ease-in-out;
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
     -o-transition: all 0.35s ease-in-out;
 }
+
 
 .navbar-default .navbar-nav li .nav1:hover {
     color: #1bd37a;
@@ -101,9 +103,6 @@ h4 {
     padding-bottom: 20px;
 }
 
-.navbar-right {
-    max-width: 400px;
-}
 
 
 /*----------------------------------------------------------------social links*/
@@ -127,6 +126,7 @@ h4 {
 .social-links li a i:hover {
     background: #444444;
 }
+
 
 
 
@@ -475,13 +475,14 @@ td {
         padding-top: 10px;
     }
 
-
     .carousel {
         width: 90%;
         height: 300;
         margin: auto;
     }
 }
+
+
 
 @media(max-width: 767px) {
     .navbar-default .navbar-nav li a {
@@ -491,7 +492,48 @@ td {
         font-size: 18px;
         font-weight: 200;
     }
-    
+}
 
 
+@media(max-width: 899px) {
+    .navbar-header {
+        float: none;
+    }
+    .navbar-left,
+    .navbar-right {
+        float: none !important;
+    }
+    .navbar-toggle {
+        display: block;
+    }
+    .navbar-collapse {
+        border-top: 1px solid transparent;
+        box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.1);
+    }
+    .navbar-fixed-top {
+        top: 0;
+        border-width: 0 0 1px;
+    }
+    .navbar-collapse.collapse {
+        display: none!important;
+    }
+    .navbar-nav {
+        float: none!important;
+        margin-top: 7.5px;
+    }
+    .navbar-nav>li {
+        float: none;
+    }
+    .navbar-nav>li>a {
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+    .collapse.in {
+        display: block !important;
+    }
+
+    .social-links {
+        visibility: hidden;
+        max-height: 0px;
+    }
 }
